--- a/deployment/.envexample
+++ b/deployment/.envexample
@@ -5,11 +5,11 @@ PEERLOGIC_API_URL=http://localhost:8000/api
 PEERLOGIC_API_USERNAME=
 PEERLOGIC_API_PASSWORD=
 
-FUNCTION_NAME_HTTP="transcribe_audio_http"
+FUNCTION_NAME_HTTP="transcribe_audio_peerlogic_http"
 FUNCTION_PORT_HTTP="4001"
 
-FUNCTION_NAME_PUBSUB="transcribe_audio_pubsub"
+FUNCTION_NAME_PUBSUB="transcribe_audio_peerlogic_pubsub"
 FUNCTION_PORT_PUBSUB="5001"
 
 PROJECT_ID="peerlogic-api-dev"
-PUBSUB_TOPIC="dev-transcribe_audio-your-name-here"
+PUBSUB_TOPIC="dev-transcribe_audio_peerlogic-your-name-here"
