--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ protobuf==3.19.4
 pydantic==1.9.0
 python-dotenv==0.19.2
 requests==2.27.1
-shortuuid===1.0.9
+shortuuid==1.0.9
+transformers==4.19.2  # tokenizer classes in ai_model_client
